# rframe

./: .bumpversion.cfg  .coveragerc  .coveralls.yml  .readethedocs.yaml  .readethedocs.yml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  README.rst  pyproject.toml  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md  release.yml
.github/workflows/: ci-tests.yml  publish.yml
docs/: basic_usage.rst  conf.py  data_backends.rst  index.rst  installation.rst  introduction.rst  requirements.txt  usage.rst  writing_schemas.rst
rframe/: __init__.py  _hypothesis_plugin.py  cli.py  data_accessor.py  data_accessor.py.py  dispatchers.py  http_client.py  http_server.py  interpolation.py  rest_client.py  rest_server.py  rframe.py  schema.py  types.py  utils.py
rframe/indexers/: __init__.py  base.py  mongo.py
rframe/indexes/: __init__.py  base.py  index.py  interpolating_index.py  interval_index.py  multi_index.py  types.py
rframe/interfaces/: __init__.py  base.py  http.py  json.py  mongo.py  pandas.py  rest.py  tinydb.py
test_data/: simple_schema.json
tests/: __init__.py  test_basics.py  test_json.py  test_mongo.py  test_pandas.py  test_rest.py  test_rframe.py  test_schema.py  test_schemas.py  test_tinydb.py  test_utils.py
