[tool]
[tool.poetry]
name = "rframe"
version = "0.1.14"
homepage = "https://github.com/jmosbacher/rframe"
description = "Top-level package for rframe."
authors = ["Yossi Mosbacher <joe.mosbacher@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "rframe" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pydantic = "^1.9.0"
pandas = "^1.4.0"
toolz = "^0.11.2"
scipy = "^1.8.0"
requests = "^2.27.1"
makefun = "^1.13.1"
loguru = "^0.6.0"
jsonschema = "^4.4.0"
multipledispatch = "^0.6.0"
fsspec = "^2022.2.0"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"
sphinx-material = "*"
nbsphinx = "*"
invoke = "^1.6.0"
hypothesis = "^6.37.2"
pymongo = "<4.0"
black = "^22.1.0"
fastapi = "^0.75.0"
coveralls = "^3.3.1"
tinydb = "^4.7.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
rframe = 'rframe.cli:main'

[tool.poetry.plugins] 
[tool.poetry.plugins."hypothesis"]
"_" = "rframe._hypothesis_plugin"


[build-system]
requires = ["poetry-core>=1.0.8", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
versioning = "semver"
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poe.tasks]
test   = "pytest --cov=rframe"
format = "black ."
clean  = """
    rm -rf .coverage
        .mypy_cache
        .pytest_cache
        dist
        ./**/__pycache__
    """
lint   = "pylint rframe"