[tool]
[tool.poetry]
name = "rframe"
version = "0.2.22"
homepage = "https://github.com/jmosbacher/rframe"
description = "Top-level package for rframe."
authors = ["Yossi Mosbacher <joe.mosbacher@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "rframe" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "<2.0"
pandas = "*"
toolz = "^1.0.0"
requests = "^2.32.3"
makefun = "^1.15.6"
loguru = "^0.7.3"
jsonschema = "^4.23.0"
fsspec = "^2025.2.0"
plum-dispatch = "2.5.7"
yapf = "0.43.0"

[tool.poetry.group.dev.dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"
sphinx-material = "*"
nbsphinx = "*"
invoke = "^2.2.0"
hypothesis = "^6.124.9"
pymongo = "<4.0"
black = "^25.1.0"
fastapi = "^0.115.8"
httpx = "^0.28.1"
coveralls = "^4.0.1"
tinydb = "^4.8.2"
pytest-cov = "^6.0.0"
rstcheck = "^6.1.0"
mypy = "^1.14.1"
perflint = "^0.8.1"

[tool.poetry.scripts]
rframe = 'rframe.cli:main'

[tool.poetry.plugins] 
[tool.poetry.plugins."hypothesis"]
"_" = "rframe._hypothesis_plugin"


[build-system]
requires = ["poetry-core>=1.8.3", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
versioning = "semver"
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poe.tasks]

  [tool.poe.tasks.format]
  help = "Run black on the code base"
  cmd  = "black ."

  [tool.poe.tasks.clean]
  help = "Remove generated files"
  cmd  = """
    # multiline commands including comments work too!
    rm -rf .coverage
           .mypy_cache
           .pytest_cache
           ./**/__pycache__
           dist
           htmlcov
           ./tests/fixtures/simple_project/venv
           ./tests/fixtures/venv_project/myvenv
           ./tests/temp
  """

  [tool.poe.tasks.test]
  help = "Run unit and feature tests"
  cmd  = "pytest --cov=rframe"

  [tool.poe.tasks.test-quick]
  help = "Run unit and feature tests, excluding slow ones"
  cmd  = "pytest --cov=rframe -m \"not slow\""

  [tool.poe.tasks.types]
  help = "Run the type checker"
  cmd  = "mypy rframe --ignore-missing-imports --install-types"

  [tool.poe.tasks.lint]
  help = "Run the linter"
  cmd  = "pylint rframe"

  [tool.poe.tasks.style]
  help = "Validate code style"
  cmd  = "black . --check --diff"

  [tool.poe.tasks.check-docs]
  help = "Validate rst syntax in the docs"
  cmd  = "rstcheck README.rst"

  [tool.poe.tasks.check]
  help     = "Run all checks on the code base"
  sequence = ["check-docs", "style", "types", "lint", "test"]

  [tool.poe.tasks.bump]
  help = "Bump version"
  cmd = "bump2version"
    [[tool.poe.tasks.bump.args]]
    name = "version"
    help = "major/minor/patch or explicit version"
    default = "patch"